styles/pages/contact/_contactFooter.sass
.contact-footer
  height: 50px
  width: 100%
  display: flex
  justify-content: center
  align-items: center
  position: relative
  z-index: 9999

  .nav-button
    border: 1px solid #7b7c7c
    min-height: 52px
    min-width: 52px
    margin: 0 10px
    border-radius: 4px
    display: flex
    justify-content: center
    align-items: center
    color: white
    opacity: 1
    cursor: pointer

    .arrow
      display: flex
      justify-content: center
      align-items: center

  .prev
    transform: rotate(180deg)

  .disable
    border: 1px solid #cccccc
    opacity: 0.2

  .press-enter
    display: none
    +tablet
      display: block
      font-size: 1rem
      margin: 0 10px
      cursor: pointer

  .skip
    display: none
    +tablet
      display: block
      margin: 0 10px
      font-size: 16px
      color: rgba(255, 255, 255, 0.2)
      cursor: pointer

  .send, .home
    min-height: 50px
    min-width: 100px
    font-size: 1rem
    line-height: 1rem
    letter-spacing: 2px
    text-align: center
    text-transform: uppercase
    border: solid 1px rgba(204, 204, 204, 0.2)

